--- a/index.html
+++ b/index.html
@@ -1012,13 +1012,15 @@
           <div class="section-title">
             <h2 id="timeline">Schedule</h2>
           </div>
-          <p align="center">
-            <table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
+
+          <!-- <table border="1" align="center"> -->
+          <tbody>
+            <!--<table border='0' cellpadding='0' cellspacing='0' width='511' style='border-collapse:
  collapse;table-layout:fixed;width:383pt'>
             <col width='259' style='mso-width-source:userset;width:259.25pt'>
             <col width='94' style='mso-width-source:userset;width:80.5pt'>
             <col width='86' style='mso-width-source:userset;width:74.5pt'>
-            <col width='72' style='width:54pt'>
+            <col width='72' style='width:54pt'> -->
             <tr height='23' style='mso-height-source:userset;height:17.25pt' id='r0'>
               <td colspan='3' height='22' class='x22' width='439'
                 style='border-bottom:1px solid windowtext;height:16.5pt;'>Workshop Schedule</td>
@@ -1125,8 +1127,8 @@
               <td class='x26' x:num="0.45833333333333331">17:45</td>
               <td></td>
             </tr>
-          </table>
-          </p>
+          </tbody>
+          <!--</p> -->
         </div>
       </div>
     </div>
