--- a/index.html
+++ b/index.html
@@ -766,8 +766,8 @@
                 <li class="nav-item active"> <a class="nav-link" href="#overview">Home</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#dates">Dates</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#call">Call for Papers</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="#timeline">Program</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#register">Registration</a> </li>
+                <li class="nav-item"> <a class="nav-link" href="#timeline">Program</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#speakers">Speakers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#people">Organizers</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="#committee">Committee</a> </li>
@@ -1012,17 +1012,14 @@
           <div class="section-title">
             <h2 id="timeline">Schedule</h2>
           </div>
-          <!-- <div style="font-weight: 400;">
-            This workshop will organize a competition of adversarial attacks on the black-box multimodal foundation models (i.e., vision language models, VLMs). The detailed instructions will be specified later.
-          </div> -->
-          <br>
           <!-- <div align="center" style="margin-top: 20px;">
             <p style="font-size: x-large;"><strong>Timeline</strong></p>
           </div> -->
-           <table border="1" align="center">
+           <table width="100%" cellpadding="0" cellspacing="0">
             <tbody>
               <tr>
-                <td colspan="2" align="center">9:00 - 9:15 Opening Remarks</td>
+                <td>9:00 - 9:15</td>
+                <td>Opening Remarks</td>
               </tr>
               <tr>
                 <td width="250px">09:15 - 10:15</td>
