--- a/index.html
+++ b/index.html
@@ -1015,10 +1015,10 @@
           <!-- <div align="center" style="margin-top: 20px;">
             <p style="font-size: x-large;"><strong>Timeline</strong></p>
           </div> -->
-           <table width="100%" cellpadding="0" cellspacing="0">
+           <table style="width:100%; text-align:center;border-spacing:0">
             <tbody>
               <tr>
-                <td>9:00 - 9:15</td>
+                <td>09:00 - 09:15</td>
                 <td>Opening Remarks</td>
               </tr>
               <tr>
