Update keynote info

--- a/index.html
+++ b/index.html
@@ -1561,7 +1561,7 @@
                     <tr height="20px">
                       <td>
                         <div class="img_wap"><img src="./res/person/ralph.jpg" alt="" class="rounded-circle"
-                            width="30%"></div>
+                            width="40%"></div>
                       </td>
                     </tr>
                     <tr height="30px">
@@ -1571,7 +1571,7 @@
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p><br>Leibniz Universität Hannover<br><br></p>
+                        <p><br>TIB - Leibniz Information Centre for Science and Technology, Leibniz Universität Hannover<br><br></p>
                       </td>
                     </tr>
                   </tbody>
