--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
           <!-- <div align="center" style="margin-top: 20px;">
             <p style="font-size: x-large;"><strong>Timeline</strong></p>
           </div> -->
-           <table style="width:100%; text-align:center;border-spacing:0">
+           <table style="width:100%; text-align:center;border:1">
             <tbody>
               <tr>
                 <td>09:00 - 09:15</td>
@@ -1558,7 +1558,7 @@
               <div class="category-block">
                 <table width="80%" border="0" align="center">
                   <tbody align="center">
-                    <tr height="20px">
+                    <tr height="40px">
                       <td>
                         <div class="img_wap"><img src="./res/person/ralph.jpg" alt="" class="rounded-circle"
                             width="60%"></div>
@@ -1571,7 +1571,7 @@
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p><br>TIB - Leibniz Information Centre for Science and Technology, Leibniz Universität Hannover<br><br></p>
+                        <p>TIB - Leibniz Information Centre for Science and Technology, Leibniz Universität Hannover</p>
                       </td>
                     </tr>
                   </tbody>
