--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,7 @@
           <!-- <div align="center" style="margin-top: 20px;">
             <p style="font-size: x-large;"><strong>Timeline</strong></p>
           </div> -->
-           <table style="width:100%; text-align:center;border:1">
+           <table width="100%" border="1" align="center">
             <tbody>
               <tr>
                 <td>09:00 - 09:15</td>
@@ -1558,10 +1558,10 @@
               <div class="category-block">
                 <table width="80%" border="0" align="center">
                   <tbody align="center">
-                    <tr height="40px">
+                    <tr height="80px">
                       <td>
                         <div class="img_wap"><img src="./res/person/ralph.jpg" alt="" class="rounded-circle"
-                            width="60%"></div>
+                            width="60%"> </div>
                       </td>
                     </tr>
                     <tr height="30px">
