--- a/index.html
+++ b/index.html
@@ -1017,6 +1017,10 @@
           </div> -->
            <table width="100%" border="1" align="center">
             <tbody>
+                <tr>
+                <td>Session 1</td>
+                <td></td>
+              </tr>
               <tr>
                 <td>09:00 - 09:15</td>
                 <td>Opening Remarks</td>
@@ -1032,6 +1036,10 @@
               <tr>
                 <td>10:35 - 11:00</td>
                 <td>Coffee Break</td>
+              </tr>
+              <tr>
+                <td>Session 2</td>
+                <td></td>
               </tr>
               <tr>
                 <td>11:00 - 11:20</td>
@@ -1058,6 +1066,10 @@
                 <td>Lunch</td>
               </tr>
               <tr>
+                <td>Session 3</td>
+                <td></td>
+              </tr>
+              <tr>
                 <td>14:00 - 15:00</td>
                 <td>Keynote #2 by Ralph Ewerth: The Challenge of Multimodality in Harmful Content Detection: Analyzing Cross-modal Consistency and Multimodal Narrative Patterns</td>
               </tr>
@@ -1072,6 +1084,10 @@
               <tr>
                 <td>15:35 - 16:00</td>
                 <td>Coffee Break</td>
+              </tr>
+              <tr>
+                <td>Session 4</td>
+                <td></td>
               </tr>
               <tr>
                 <td>16:00 - 17:00</td>
