--- a/index.html
+++ b/index.html
@@ -1031,8 +1031,7 @@
               </tr>
               <tr>
                 <td>10:15 - 10:35</td>
-                <td>Long Paper #1: Towards a crowdsourced framework for online hate speech moderation - a case study in the Indian political scenario</td>
-              </tr>
+                <td>Long Paper #1: Towards Safer Online Spaces: Deep Learning for Hate Speech Detection in Code-Mixed Social Media Conversations</tr>
               <tr>
                 <td>10:35 - 11:00</td>
                 <td>Coffee Break</td>
@@ -1047,7 +1046,9 @@
               </tr>
               <tr>
                 <td>11:20 - 11:40</td>
-                <td>Long Paper #3: Towards Safer Online Spaces: Deep Learning for Hate Speech Detection in Code-Mixed Social Media Conversations</td>
+                <td>Long Paper #3: Towards a crowdsourced framework for online hate speech moderation - a case study in the Indian political scenario</td>
+              
+                  </td>
               </tr>
               <tr>
                 <td>11:40 - 12:00</td>
