--- a/index.html
+++ b/index.html
@@ -1046,7 +1046,7 @@
               </tr>
               <tr>
                 <td>11:20 - 11:40</td>
-                <td>Long Paper #3: Towards a crowdsourced framework for online hate speech moderation - a case study in the Indian political scenario</td>
+                <td>Long Paper #3: Towards a crowdsourced framework for online hate speech moderation - a case study in the Indian political scenario(virtual)</td>
               
                   </td>
               </tr>
