--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,8 @@
               </tr>
               <tr>
                 <td>10:15 - 10:35</td>
-                <td>Long Paper #1: Towards Safer Online Spaces: Deep Learning for Hate Speech Detection in Code-Mixed Social Media Conversations</tr>
+                <td>Long Paper #1: Sexism Detection on a Data Diet
+                  </tr>
               <tr>
                 <td>10:35 - 11:00</td>
                 <td>Coffee Break</td>
@@ -1042,7 +1043,7 @@
               </tr>
               <tr>
                 <td>11:00 - 11:20</td>
-                <td>Long Paper #2: Sexism Detection on a Data Diet</td>
+                <td>Long Paper #2: Towards Safer Online Spaces: Deep Learning for Hate Speech Detection in Code-Mixed Social Media Conversations(virtual)</td>
               </tr>
               <tr>
                 <td>11:20 - 11:40</td>
