--- a/index.html
+++ b/index.html
@@ -1539,7 +1539,7 @@
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p>Institute of Informatics and Telematics of the National Research Council </p>
+                        <p>Institute of Informatics and Telematics of the National Research Council, Italy </p>
                       </td>
                     </tr>
                   </tbody>
@@ -1564,7 +1564,7 @@
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p><br>University of Amsterdam<br><br></p>
+                        <p><br>University of Amsterdam, Netherlands<br><br></p>
                       </td>
                     </tr>
                   </tbody>
@@ -1576,10 +1576,10 @@
               <div class="category-block">
                 <table width="80%" border="0" align="center">
                   <tbody align="center">
-                    <tr height="80px">
+                    <tr height="30px">
                       <td>
                         <div class="img_wap"><img src="./res/person/ralph.jpg" alt="" class="rounded-circle"
-                            width="90%"> </div>
+                            width="30%"> </div>
                       </td>
                     </tr>
                     <tr height="30px">
@@ -1589,7 +1589,7 @@
                     </tr>
                     <tr height="60px">
                       <td>
-                        <p>TIB - Leibniz Information Centre for Science and Technology, Leibniz Universität Hannover</p>
+                        <p>TIB - Leibniz Information Centre for Science and Technology, Leibniz Universität Hannover, Germany</p>
                       </td>
                     </tr>
                   </tbody>
