--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
               </tr>
               <tr>
                 <td>15:20 - 15:35</td>
-                <td>Short Paper #3:On the Moral Intuitions of Fake News Spreaders</td>
+                <td>Short Paper #3:On the Moral Intuitions of Fake News Spreaders (Virtual)</td>
               </tr>
               <tr>
                 <td>15:35 - 16:00</td>
