--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
             </h1>
             <br>
             <h4>The 16th ACM Web Science Conference 2024. May 21-24, 2024. Stuttgart, Germany</h4>
-            <br><br>
+            <br>Read more in our <a href="https://dl.acm.org/doi/10.1145/3630744.3665312">WebSci Companion Proceedings</a><br>
             <h2 id="overivew">Overview</h2>
           </div>
           <p>With the advancement of digital technologies and gadgets, online content is easily accessible.
