--- a/index_1.html
+++ b/index_1.html
@@ -7,7 +7,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>WebSci 2024 Workshop</title>
+  <title>WebSci 2026 Workshop</title>
 
   <!-- PLUGINS CSS STYLE -->
   <link href="./res/jquery-ui.min.css" rel="stylesheet">
@@ -794,7 +794,7 @@
             <h1> DHOW: Diffusion of Harmful Content on Online Web Workshop
             </h1>
             <br>
-            <h4>The 16th ACM Web Science Conference 2024. May 21-24, 2024. Stuttgart, Germany</h4>
+            <h4>The 18th ACM Web Science Conference 2026. May 26-29, 2026. Braunschweig, Germany</h4>
             <br>Read more in our <a href="https://dl.acm.org/doi/10.1145/3630744.3665312">WebSci Companion Proceedings</a><br>
             <h2 id="overivew">Overview</h2>
           </div>
@@ -810,7 +810,7 @@
           <p> We will bring the research on harmful content under one umbrella so that research on different topics (hate speech, misinformation,
             disinformation, self-harm, offensive content, etc.) can bring some novel methods
             and recommendations for users, leveraging text analysis with image, audio, and video recognition 
-            to detect harmful content in diverse formats. The workshop will cover the ongoing issue of war or elections in 2024.
+            to detect harmful content in diverse formats. The workshop will cover the ongoing issue of war or elections in 2026.
             </p>
           <p>We believe this workshop will provide a unique opportunity for researchers and practitioners to exchange
             ideas, share latest developments, and collaborate on addressing the challenges associated with
@@ -820,7 +820,7 @@
             one of the aims of the workshop is to mobilise the researchers working on the related areas to form a community. </p>
 
           <!-- <strong>
-            <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2024 (AoE).
+            <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2026 (AoE).
           </strong>
           <a href="https://easychair.com/dhow" style="color:rgb(0, 140, 255);">Click here to
             visit the submission site!</a>
@@ -880,14 +880,14 @@
             <li>Role of Explainable AI in Studying Harmful Content</li>
             <li>Multi-modal harmful content</li>
             <li>Deepfake and its influence</li>
-            <li>Multi-lingual harmful content like Hate speech, Fake News Bot, spam, troll detection</li>
+            <li>Multi-lingual harmful content like Hate speech, Fake News Bot, spam, and troll detection</li>
             <li>Both Qualitative and Quantitative study on harmful content</li>
             <li>Psychological effects of harmful content like mental health</li>
             <li>Approaches for data collection or data annotation using LLM on harmful content</li>
             <li>User study on the effects of harmful content on human beings</li>
           </ul>
           <!-- <strong>
-            <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2024 (AoE).
+            <font color="#FF0000">Important:</font> The submission deadline is 15th March, 2026 (AoE).
           </strong>
           <a href="https://easychair.com/dhow" style="color:rgb(0, 140, 255);">Click here to
             visit the submission site!</a>
@@ -910,25 +910,25 @@
           
           <b>Presentation</b>. All accepted papers will be presented as oral presentations, and some would be selected for posters depending on schedule constraints. 
             <br>    
-          <strong>Instructions for Camera-Ready Papers</strong>: Your camera-ready submission must be formatted according to the the latest ACM SIG proceedings template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a> format. Further, the authors are required to include a proper classification for the paper according to the ACM Classification System (CCS) and Keywords. You should submit a single ZIP file containing all your source files (e.g., *.tex, *.bib, *.sty, and all figures either in Latex or .docx file for Word users).
+          <strong>Instructions for Camera-Ready Papers</strong>: Your camera-ready submission must be formatted according to the latest ACM SIG proceedings template <a href="https://www.acm.org/publications/proceedings-template">https://www.acm.org/publications/proceedings-template</a> format. Further, the authors are required to include a proper classification for the paper according to the ACM Classification System (CCS) and Keywords. You should submit a single ZIP file containing all your source files (e.g., *.tex, *.bib, *.sty, and all figures either in Latex or .docx file for Word users).
           <be>
           <br>
           We will share your information with ACM for the proceeding, and they will contact you(the corresponding author) for the source file and copyright form. 
           <br>
-          <b>Proceedings</b>. Accepted papers will be presented at the workshop and will be published in the companion (workshop) proceedings of ACM WebSci 2024.
+          <b>Proceedings</b>. Accepted papers will be presented at the workshop and will be published in the companion (workshop) proceedings of ACM WebSci 2026.
           
           <!-- Submissions papers (.pdf format) must use the <a
             href="ceur" style="color:blue;">CEUR Format
-            for LaTeX/Word Zip file</a> and be anonymized and follow WebSci 2024 author instructions. The workshop considers two types of
+            for LaTeX/Word Zip file</a> and be anonymized and follow WebSci 2026 author instructions. The workshop considers two types of
           submissions: (1) Long Paper: Papers are limited to <strong>14</strong> pages excluding references; (2) Short
           Papers: Papers are limited to <strong>6</strong> pages including references. -->
           <br><br>
           <!-- <strong>Length</strong>: As stated in the CfP, submitted papers may be <strong>6</strong> to <strong>8</strong> pages. Up to two additional pages may be added for references. The reference pages must only contain references. Overlength papers will be rejected without review.<br> -->
           <strong>Submission Site</strong>:
           <a href="https://easychair.org/conferences/?conf=dhow2024"
-            style="color:blue;" target="_blank">https://easychair.org/conferences/?conf=dhow2024</a>
+            style="color:blue;" target="_blank">https://easychair.org/conferences/?conf=dhow2026</a>
           <br>
-          <strong>Submission Due</strong>: <strong> April 2, 2024, Anywhere on Earth (AoE)<strong>
+          <strong>Submission Due</strong>: <strong> April 2, 2026, Anywhere on Earth (AoE)<strong>
         </div>
       </div>
     </div>
